# kronos

./: .gitignore  .hgeol  .hgignore  .hgsub  .hgsubstate  .hgtags  CMakeLists.txt  CTestConfig.cmake  build.sh  changelog.md  commit-merge.sh  corelib.h.in  genrev.sh  hgrev  package_build.sh  readme.md
.builds/: ubuntu.yml  wasm.yml
.github/workflows/: release.yml
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-immutable  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-served
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
.hg/wcache/: manifestfulltextcache
cmake/: Apple.cmake  Binaryen.cmake  Clang.cmake  Gcc.cmake  LLVM.cmake  MSVC.cmake  Package.cmake  Platform.cmake  Release.cmake  StaticTestDriver.cmake  Test.cmake  Unix.cmake  WaveCore.cmake
config/: config.h.in
editors/: kronos.natvis
editors/st3/: Context.sublime-menu  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Kronos (OSX).sublime-settings  Kronos (Windows).sublime-settings  Kronos.JSON-tmLanguage  Kronos.sublime-settings  Kronos.tmLanguage  LSP (Windows).sublime-settings  LSP.sublime-settings  Main.sublime-menu  krepl.py
package/: .build.yml  KronosConfig.cmake  azure-pipelines.yml  bitbucket-pipelines.yml  install_vcredist.bat  installer_eula.rtf  kronos_shell.bat  msvc14_wix.wxi.in.xml  windows_sharedlibs.xml
projects/: JosueMoreno.k  ParallelEQ.k  metaseq.k  pareq.k  perinto.k  smc2018.k  vocoder.k  wavecore-x86.k
src/: commit.inc  kronos.h  kronos_abi.h  kronosrt.h
src/backends/: Binaryen.h  BinaryenCompiler.cpp  BinaryenCompiler.h  BinaryenEmitter.cpp  BinaryenEmitter.h  BinaryenInterface.cpp  BinaryenModule.cpp  BinaryenModule.h  CallGraphAnalysis.cpp  CallGraphAnalysis.h  CodeGenCompiler.cpp  CodeGenCompiler.h  CodeGenModule.cpp  CodeGenModule.h  CodeMotionPass.cpp  CodeMotionPass.h  CopyElision.cpp  DriverSignature.cpp  DriverSignature.h  GenericCodeGen.h  GenericCompiler.h  GenericModule.h  LLVM.h  LLVMAoT.cpp  LLVMCmdLine.h  LLVMCompiler.cpp  LLVMCompiler.h  LLVMJiT.cpp  LLVMLibraries.cpp  LLVMModule.cpp  LLVMModule.h  LLVMOpt.cpp  LLVMScatterLoad.cpp  LLVMSignal.h  LLVMUtil.h  SideEffectCompiler.cpp  SideEffectCompiler.h  TargetLowering.cpp  TargetLowering.h  WaveCore.cpp  (+2 more)
src/common/: CallStack.cpp  CallStack.h  DynamicScope.cpp  DynamicScope.h  Enumerable.cpp  Enumerable.h  Err.h  Graphviz.cpp  Graphviz.h  Hasher.h  IEnumerable.cpp  Platform.cpp  PlatformUtils.h  PreprocessorMeta.h  Ref.cpp  Ref.h  Reflect.h  bitstream.h  kiss_fft.cpp  kiss_fft.h  kiss_fftr.cpp  ssstring.cpp  ssstring.h
src/driver/: AtlysInterface.h  CmdLineOpts.cpp  CmdLineOpts.h  CompareTestResultJSON.cpp  CompareTestResultJSON.h  CompileServer.cpp  JsonRPCEndpoint.cpp  JsonRPCEndpoint.h  JsonRPCRepl.cpp  JsonRPCRepl.h  LanguageServer.cpp  (+37 more)
src/lithe/: .hgignore  CMakeLists.txt  adapter.h  ast.cpp  ast.h  lithe.cpp  lithe.h  variant.h
src/lithe/.hg/: dirstate  hgrc  undo.desc
src/lithe/.hg/cache/: branch2-served.hidden  rbc-revs-v1  tags2-served
src/lithe/.hg/cache/storehash/: ba00de963be6
src/lithe/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/lithe/.hg/store/data/: _c_make_lists.txt.i  adapter.h.i  ast.cpp.i  ast.h.i  lithe.cpp.i  lithe.h.i  variant.h.i  ~2ehgignore.i
src/lithe/.hg/store/data/grammar/: common.cpp.i  common.h.i  json.cpp.i  json.h.i  kronos.cpp.i  kronos.h.i  kronos__tags.inc.i
src/lithe/.hg/store/data/src/: adapter.h.i  ast.cpp.i  ast.h.i  lithe.cpp.i  lithe.h.i  variant.h.i
src/lithe/.hg/store/data/test/: json.cpp.i  kronos.cpp.i  xml.cpp.i
src/lithe/grammar/: common.cpp  common.h  json.cpp  json.h  kronos.cpp  kronos.h  kronos_tags.inc
src/lithe/test/: json.cpp  kronos.cpp  xml.cpp
src/paf/: .hgignore  CMakeLists.txt  PAF.h  PAFConfig.cmake  PropertySet.h  audiotoolbox.cpp  mmf.cpp  mmfspackle.cpp  mmfspackle.h  sndfile.cpp  test.cpp
src/paf/.hg/: dirstate  hgrc  undo.desc
src/paf/.hg/cache/: branch2-served  rbc-revs-v1  tags2
src/paf/.hg/cache/storehash/: 26a96285051f
src/paf/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/paf/.hg/store/data/: _c_make_lists.txt.i  _find_f_f_m_p_e_g.cmake.i  _find_lib_snd_file.cmake.i  _p_a_f.h.i  _p_a_f_config.cmake.i  _property_set.h.i  audiotoolbox.cpp.i  mmf.cpp.i  mmfspackle.cpp.i  mmfspackle.h.i  sndfile.cpp.i  test.cpp.i  ~2ehgignore.i
src/paf/.hg/store/data/msvc/: _p_a_f.sln.i
src/paf/.hg/store/data/msvc/_p_a_f/: _p_a_f.vcxproj.i
src/paf/.hg/store/data/wavsink/: _async_c_b.h.i  _buffer_lock.h.i  _class_factory.h.i  _create_wav_sink.h.i  _grow_array.h.i  _prop_var.h.i  _tiny_map.h.i  _wav_sink.h.i  common.h.i  critsec.h.i  linklist.h.i  logging.h.i  logmediatype.h.i  mediatype.h.i  mfutils.h.i  registry.h.i  trace.h.i  wavsink.cpp.i
src/pcoll/: .hgignore  CMakeLists.txt  README.md  hamt.cpp  hamt.h  llist.h  pcoll.natvis  stm.h  treap.h  util.h
src/pcoll/.hg/: dirstate  hgrc  undo.desc
src/pcoll/.hg/cache/: branch2-served  rbc-revs-v1  tags2-served
src/pcoll/.hg/cache/storehash/: b73d80edb7f8
src/pcoll/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/pcoll/.hg/store/data/: _c_make_lists.txt.i  _r_e_a_d_m_e.md.i  hamt.cpp.i  hamt.h.i  llist.h.i  pcoll.natvis.i  stm.h.i  treap.h.i  util.h.i  ~2ehgignore.i
src/pcoll/.hg/store/data/tests/: basic__stm.cpp.i  fuzz__bitmap__array.cpp.i  fuzz__hamt.cpp.i  hamt__concurrent__fuzz.cpp.i  hamt__dissoc.cpp.i  hamt__integrity.cpp.i  leaktest.h.i  stm__switcharoo.cpp.i  test.cpp.i  tests.h.i  treap__concurrent__fuzz.cpp.i  treap__integrity.cpp.i
src/pcoll/.hg/wcache/: manifestfulltextcache
src/pcoll/tests/: hamt_concurrent_fuzz.cpp  hamt_dissoc.cpp  hamt_integrity.cpp  leaktest.h  stm_switcharoo.cpp  test.cpp  tests.h  treap_concurrent_fuzz.cpp  treap_integrity.cpp
src/runtime/: CMakeLists.txt  Environment.h  IObject.h  TimerCallback.h  audio.cpp  audio.h  inout.cpp  inout.h  interop.cpp  kronosrt.cpp  kronosrtxx.h  midi.cpp  midi.h  o2.cpp  o2driver.cpp  o2driver.h  scheduler.cpp  scheduler.h  timercallback.cpp
tests/: configure_tests.py  partition_dynamic_tests.py
(+1912 files in other folders)
